# .githooks

./: .gitignore  .lv-git-hooks-config.json  .markdownlintrc  .secrets.baseline  ALL_CHECKS.md  INSTALLATION.md  README.md  RECOMMENDED_HOOKS.md  activate-hooks-env.bat  activate-hooks-env.ps1  auto-branch.txt  auto-branch2.txt  block.txt  bootstrap.py  check-dependencies.bat  check-dependencies.ps1  dispatcher-block.txt  dispatcher-block2.txt  dispatcher-block3.txt  dispatcher-block4.txt  git-go  git-go.cmd  hook_utils.py  install-all.bat  install-all.ps1  install-hook.bat  install-hooks.ps1  install-lv-hooks.ps1  install.bat  install.ps1  install.py  install.sh  jira-feature-template.md  jira-test.txt  msg2.txt  msg3.txt  package-lock.json  package.json  popup.js  py-dispatcher-block.txt  (+5 more)
.github/: DISABLED-HOOKS.md  copilot-instructions.md
.vscode - Copy/: extensions.json  launch.json  settings.json  tasks.json
applypatch-msg/: README.md
commit-msg/: README.md  commit-msg-jira  commit-msg-smart-commit.hook  conventional-commitlint.hook  conventional-commitlint.hook.disabled  enforce-insert-issue-number.hook
commitmint/: cli.py
docs/: API.md  FLOW.md  GIT-GO-CLI.md  GITHUB-ISSUES-IMPLEMENTATION-SUMMARY.md  GITHUB-ISSUES-INTEGRATION.md  INSTALL-GUIDE.md  INSTALLATION.md  JIRA-INTEGRATION.md  STRUCTURE.md  TODO.md
githooks/: __init__.py
githooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
post-checkout/: check-git-bash-in-path.hook.disabled  copy-py-setup-script.hook.disabled  delete-pyc-files.hook.disabled  jira-transition-worklog.hook  launch-tools.hook.disabled  new-branch-alert.hook  new-branch-alert.hook.disabled
post-commit/: README.md  autoversion-conventional-commit.hook  autoversion-conventional-commit.hook.disabled
post-update/: update-server-info.hook
pre-commit/: README.md  block-labview-binaries.hook  check-added-large-files.hook  check-json.hook  check-merge-conflict.hook  check-toml.hook  check-yaml.hook  commitmint.hook  detect-secrets.hook  dispatcher.hook  dispatcher.py  end-of-file-fixer.hook  format-code.hook  hook_utils.py  lv-diff-report.hook  mixed-line-ending.hook  pre-commit.sh  prefix-commit-type-by-diff.hook  prevent-commit-to-main-or-develop.hook  search-term.hook  shellcheck.hook  spell-check-md-files.hook  spell-check-md-files.hook.disabled  trailing-whitespace.hook  verify-name-and-email.hook  warn-if-lv-hooks-missing.hook
pre-push/: README.md  hook_utils.py  jira-add-push-worklog.hook  prevent-bad-push.hook
pre-rebase/: README.md  prevent-rebase.hook
prepare-commit-msg/: README.md  classify-commit-type-by-diff.hook  enforce-jira-id-match-branch.hook  insert-issue-id.hook
tests/: SKIPPED-TESTS.md  __init__.py  conftest.py  run_lint.py  test_0_installer_unit.py  test_1_install_integration.py  test_2_hook_integration.py  test_actual_branch_commitmint.py  test_alias_map.py  test_all_hooks.py  test_applypatch_msg_check_log_message.py  test_autoversion.py  test_autoversion_conventional_commit.py  test_autoversion_conventional_commit_error.py  test_autoversion_conventional_commit_hook.py  test_classify_commit_type_by_diff.py  test_classify_commit_type_by_diff_hook.py  test_commit_msg_jira.py  test_commit_msg_smart_commit_hook.py  test_commitmint.py  test_conventional_commitlint.py  test_create_and_push_branch_retry.py  test_cyclic_imports.py  test_delete_pyc_files.py  test_delete_pyc_files_hook.py  test_dependencies.py  (+40 more)
(+316 files in other folders)
