[project]
name = "githooks"
version = "0.1.0"
description = "A collection of cross-platform Python git hooks."
requires-python = ">=3.8"
dependencies = [
	"gitpython>=3.1.0",
	"click>=8.0.0",
	"colorama>=0.4.0",
	"pyyaml>=6.0",
	"requests>=2.25.0",
	"black>=21.0.0",
	"flake8>=4.0.0",
	"pylint>=2.12.0",
	"mypy>=0.910",
	"isort>=5.10.0",
	"markdown>=3.3.0",
	"pygments>=2.10.0",
	"pytest>=6.2.0",
	"pytest-cov>=3.0.0",
	"shellcheck-py>=0.11.0.1",
	"yamllint>=1.32.0",
	"detect-secrets>=1.5.0",
	"tomli>=2.0.1",
]

[project.scripts]
commitmint = "commitmint.cli:main"