[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "githooks"
version = "2.0.0"
description = "Advanced Git hook management with Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "colorama>=0.4.6,<1.0.0",
]

[project.scripts]
git-go = "githooks.cli.git_go:main"

[project.optional-dependencies]
dev = [
    "black>=24.0.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "isort>=5.13.0,<6.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
]
integrations = [
    "keyring>=24.3.0,<25.0.0",
    "jira>=3.6.0,<4.0.0",
    "PyGithub>=2.1.0,<3.0.0",
    "pyspellchecker>=0.8.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=githooks",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (git operations)",
    "e2e: End-to-end workflow tests (slow)",
    "performance: Performance benchmarks (subprocess overhead)",
]

[tool.coverage.run]
source = ["githooks", "install.py"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "**/README.md",
    "lib/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "def main\\(\\) -> int:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "class .*\\(.*\\):  # type: ignore",
]
precision = 2
skip_empty = true

[tool.black]
line-length = 155
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 155
known_first_party = ["githooks"]
skip = [".venv", "venv", "build", "dist", "lib"]

[tool.flake8]
max-line-length = 155
extend-ignore = ["E203", "W503", "E501"]
exclude = [".venv", "venv", "build", "dist", "__pycache__"]
